# spio

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  MANIFEST.in  README.md  benchmark.py  justfile  profile_fiesta.py  profile_timm.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.py  train_performance_model.py
docs/: spio-c++-style-guide.md
kernels/: add.cu  conv2d_gw8.cu  conv2d_gw8_wgrad.cu  conv_group_4.cu  conv_small_group.cu  conv_small_group_wgrad.cu  ldmatrix.cu  mma.cu
scripts/: benchmark.py  benchmark_kernels_for_perf_model.bash  benchmark_model.bash  benchmark_model_gw8.bash  convnext.bash  efficientnet.bash  make_arch_models_from_device_models.bash  make_perf_model_folders.sh  plot_kernel_bench.py  profile_block.py  profile_blocks.bash  profile_configs.bash  profile_convnext_block.bash  profile_fiesta.py  profile_timm.py  script-requirements.txt  train_performance_model.py
spio/: __init__.py  benchmark.py  close.py  code_directory.py  compile.py  compile_kernel.py  compile_test_kernel.py  compiler.py  compiler_pool.py  conv_gw8.py  conv_gw8_function.py  conv_size.py  generators.py  index.py  kernel.py  params.py  paths.py  profile.py  profile_fiesta.py  profile_timm.py  replace_ops.py  run_test.py  tensor.py
tests/: test_conv2d_gw8.py  test_conv2d_gw8_troubleshoot.py  test_cpp.py  test_cuda_driver.py  test_dims.py  test_dtype.py  test_fragment.py  test_generators.py  test_index.py  test_kernel.py  test_kernel_conv_small_group.py  test_layernorm_2d.py  test_ldmatrix.py  test_macs_and_bytes.py  (+8 more)
(+197 files in other folders)
